--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
   },
   "homepage": "",
   "devDependencies": {
+    "@eslint/js": "^9.37.0",
     "css-loader": "^7.1.2",
+    "eslint": "^9.37.0",
+    "globals": "^16.4.0",
     "html-webpack-plugin": "^5.6.4",
+    "prettier": "3.6.2",
     "style-loader": "^4.0.0",
     "webpack": "^5.102.0",
     "webpack-cli": "^6.0.1"
